--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -55,7 +55,7 @@
     background-color:white;
     font-size: 16px;
     font-weight: 600;
-    border: 1px solid  #dedede;;
+    border: 1px solid  #dedede;
     padding: 8px 12px;
     border-radius: 20px;
     display: flex;
@@ -68,7 +68,6 @@
     background-color:#e6e4e4;
     cursor: pointer;
   }
-  
   .para {
     font-size: 16px;
     color: #5e5e5e;
