--- a/src/components/RightSidebar/WhoToFollow/WhoToFollow.module.css
+++ b/src/components/RightSidebar/WhoToFollow/WhoToFollow.module.css
@@ -11,6 +11,10 @@
   margin-bottom: 20px;
  
 }
+.FirstConatiner h2{
+  font-size: 17px;
+  font-weight: 600;
+}
 
 .userDataPart>div {
   /* padding: 10px; */
@@ -32,6 +36,8 @@
   display: flex;
   align-items: center;
   margin-bottom: 5px;
+  font-size: 12px;
+  font-weight: 500;
 }
 
 .userDataPart button {
@@ -39,7 +45,7 @@
   color: white;
   border: none;
   border-radius: 20px;
-  padding: 5px 10px;
+  padding: 2px 5px;
   cursor: pointer;
   margin-left: auto;
   box-sizing: border-box;
