--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -198,3 +198,36 @@
     color:blue;
     cursor: pointer;
   }
+  /* iPads */
+@media (max-width: 768px) {
+  .main {
+    width: 100%;
+  }
+}
+
+ /* desktops */
+@media (min-width: 769px) {
+  .body1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+  }
+  .main {
+    width: 600px;
+  }
+}
+
+ /* mobile devices */
+@media (max-width: 480px) {
+  .main {
+    width: 100%;
+  }
+  .google, .apple, .Formfiled>input, .pass {
+    width: 80%;
+  }
+  .container h4 {
+    font-size: 30px;
+  }
+}
