--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -13,7 +13,7 @@
     width:100%;
   }
   .main {
-    width:600px;
+    width:60%;
     background-color: white;
     border-radius: 20px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
