--- a/src/pages/SignUp/step1/step1.module.css
+++ b/src/pages/SignUp/step1/step1.module.css
@@ -1,19 +1,24 @@
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: sans-serif;
+ 
+}
 .main_container {
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(208, 205, 205);
+    background-color: white;
   }
   .inner_container {
     font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
     overflow-y: scroll;
-    height: 25rem;
-    margin: 6rem 0;
-    margin-top: 2rem;
-    width: 30%;
-    box-shadow: 0 0 10px grey;
+    height: 80%;
+    width: 40%;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     padding: 3rem;
     padding-top: 10px;
     border-radius: 14px;
